--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@types/jquery": "^3.5.33",
+    "@types/lodash": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "axios": "^1.6.7",
+    "datatables.net": "^2.3.5",
+    "dropzone": "^6.0.0-beta.2",
+    "flyonui": "^2.4.1",
     "formik": "^2.4.5",
+    "jquery": "^3.7.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.445.0",
     "mongodb": "^6.3.0",
     "next": "14.2.13",
     "next-auth": "^4.24.6",
+    "nouislider": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
