--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@next-auth/mongodb-adapter": "^1.1.3",
     "@types/jquery": "^3.5.33",
     "@types/lodash": "^4.17.21",
     "@types/node": "^20",
@@ -26,12 +25,12 @@
     "lucide-react": "^0.445.0",
     "mongodb": "^6.3.0",
     "next": "14.2.13",
-    "next-auth": "^4.24.6",
     "nouislider": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
+    "sonner": "^2.0.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
